Fix layout issue in popup

--- a/_sass/components/_location.scss
+++ b/_sass/components/_location.scss
@@ -1,6 +1,5 @@
 .location {
   display: flex;
-  flex-basis: 200px;
   padding-bottom: 20px;
 
   &--event {
